--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,6 +1,6 @@
 nnoremap / :action Find<CR>
-nnoremap <Space>w/ :action VimWindowSplitVertical<CR>
-nnoremap <Space>wd :action VimWindowClose<CR>
+nnoremap <Space>w/ :action SplitVertically<CR>
+nnoremap <Space>wd :action CloseEditor<CR>
 nnoremap <Space>pf :action GotoFile<CR>
 nnoremap <Space>bd :action CloseEditor<CR>
 nnoremap <Space>/ :action FindInPath<CR>
